api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: api-data
            mountPath: /opt/app/uploads
            subPath: api
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
