rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: broker
  template:
    metadata:
      labels:
        components: broker
    spec:
      hostname: rmq        # RabbitMQ use hostname in path, has to be const
      containers:
      - name: rmq
        image: rabbitmq:4.3.2-management
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
          - containerPort: 5672
          - containerPort: 15672  # Web-interface
        volumeMounts:
          - name: rmq-data
            mountPath: /var/lib/rabbitmq
            subPath: rabbitmq
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
