ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: conv.test
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/rabbitmq-web(/|$)(.*)"
        backend:
          service:
            name: rmq-clusterip
            port:
              number: 15672
      - pathType: ImplementationSpecific
        path: "/()(.*)"
        backend:
          service:
            name: conv-app-clusterip
            port:
              number: 80
